--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "fake-package": "workspace:*"
+  },
   "devDependencies": {
     "vite": "^5.0.10"
   }
